Fix home page skills section mobile layout

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -72,3 +72,11 @@
   height: 50px;
   width: 50px;
 }
+
+.page #skills-section .progress-circle-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding: 2rem;
+}
